[gd_scene load_steps=13 format=3 uid="uid://dlocbot83i03"]

[ext_resource type="Texture2D" uid="uid://2efk1emm7ke0" path="res://Frameworks(YourStuff)/Pong;)/assets/Bg.png" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://djwq8d8jk8wm5" path="res://Frameworks(YourStuff)/Pong;)/scenes/main.gd" id="2_jyhfs"]
[ext_resource type="FontFile" uid="uid://ds88erl2dvdbh" path="res://Frameworks(YourStuff)/Pong;)/assets/pixel_font.ttf" id="2_sugp2"]
[ext_resource type="Script" uid="uid://d1w0ib21dcs06" path="res://Frameworks(YourStuff)/Pong;)/scenes/player.gd" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://4tqsahcu8op" path="res://Frameworks(YourStuff)/Pong;)/scenes/ball.gd" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://tqjycajipgre" path="res://Frameworks(YourStuff)/Pong;)/scenes/cpu.gd" id="4_tefeu"]
[ext_resource type="Texture2D" uid="uid://c6auaj0onpb5d" path="res://Frameworks(YourStuff)/Pong;)/assets/particle.png" id="5_o6xl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(1152, 63.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6xl0"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tipki"]
size = Vector2(64, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_0wfyh")
centered = false
script = ExtResource("2_jyhfs")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_jyhfs")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player"]
visible = false
position = Vector2(20, 0)
amount = 3
randomness = 1.0
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.003921569, 0.003921569, 1, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Player"]
visible = false
amount = 3
randomness = 0.6
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(0.050980393, 0, 0.9764706, 1)

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_tefeu")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="CPUParticles2D" type="CPUParticles2D" parent="CPU"]
visible = false
amount = 50
texture = ExtResource("5_o6xl0")
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(10, 60)
gravity = Vector2(0, 0)
initial_velocity_min = 309.28
initial_velocity_max = 1000.0

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_tbgi4")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -31.75)
shape = SubResource("RectangleShape2D_tefeu")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_o6xl0")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_tipki")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_tipki")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 400.0
offset_top = 5.0
offset_right = 504.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_sugp2")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_sugp2")
theme_override_font_sizes/font_size = 50
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 93.0
offset_top = 281.0
offset_right = 184.0
offset_bottom = 304.0
text = "		   ^
Arrow keys!
		   v"

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
